# pepbench-annotation

./: .gitignore  .ruff.toml  README.md  _tasks.py  pyproject.toml
.github/workflows/: test-and-lint.yml
docs/: conf.py  index.rst
docs/modules/: index.rst
docs/sphinxext/: githublink.py
examples/: README.rst
src/pepbench_annotation/: __init__.py  generate_labeling_borders_example.py  start_gui.py  tests.py
src/pepbench_annotation/exporter/: __init__.py  _empkins_exporter.py  _guardian_exporter.py
src/pepbench_annotation/helpers/: __init__.py  _labeling_border_generation.py
src/pepbench_annotation/importer/: __init__.py  _ecg_importer.py  _empkins_importer.py  _guardian_importer.py  _icg_importer.py
src/pepbench_annotation/labels/: __init__.py  _labels.py
src/pepbench_annotation/utils/: __init__.py  _labeling_border_generation.py  _utils.py
